--- a/FinKont_homework.Rmd
+++ b/FinKont_homework.Rmd
@@ -34,10 +34,10 @@ library(dplyr)
 <blockquote class = "def">
 **Definition 4.1.** *(Brownian motion)* A stochastic process $W$ is called a **Brownian motion** or **Wiener process** if the following conditions hold
 
- 1. <img class="math inline"  src="https://math.vercel.app?inline=W_0=0"/>.
- 2. The process <img class="math inline"  src="https://math.vercel.app?inline=W"/> has independent increments, i.e. if <img class="math inline"  src="https://math.vercel.app?inline=r<s\le t< u"/> then <img class="math inline" src="https://math.vercel.app?inline=W_u-W_t"/> and <img class="math inline"  src="https://math.vercel.app?inline=W_s-W_r"/> are independent random variables.
- 3. For <img class="math inline"  src="https://math.vercel.app?inline=s<t"/> the random variable <img class="math inline"  src="https://math.vercel.app?inline=W_t-W_s"/> has the Gaussian distribution <img class="math inline"  src="https://math.vercel.app?inline=\mathcal{N}(0,t-s)" />.
- 4. <img class="math inline"  src="https://math.vercel.app?inline=W"/> has continuous trajectories i.e. <img class="math inline"  src="https://math.vercel.app?inline=s\mapsto W(s;\omega)"/> i continuous for all <img class="math inline"  src="https://math.vercel.app?inline=\omega \in\Omega"/>.
+ 1. $W_0=0$.
+ 2. The process $W$ has independent increments, i.e. if $r<s\le t< u$ then $W_u-W_t$ and $W_s-W_r$ are independent random variables.
+ 3. For $s<t$ the random variable $W_t-W_s$ has the Gaussian distribution $\mathcal{N}(0,t-s)$.
+ 4. $W$ has continuous trajectories i.e. $s\mapsto W(s;\omega)$ i continuous for all $\omega \in\Omega$.
 </blockquote>
 
 ```{r}
@@ -63,9 +63,9 @@ data.frame(t = t, W = W) %>%
 
 <blockquote class = "def">
 
-**Definition C.1.** Let $M_t$ be a stochastic process defined on a background space <img src="https://math.vercel.app?inline=(\Omega,\mathcal{F},P)"/>. Let <img src="https://math.vercel.app?inline=(\mathcal{F}_t)_{t\ge 0}"/> be a filtration. If $M_t$ is adapted to the filtration <img src="https://math.vercel.app?inline=\mathcal{F}_t"/>, $E\vert M_t\vert <\infty$ and
+**Definition C.1.** Let $M_t$ be a stochastic process defined on a background space $(\Omega,\mathcal{F},P)$. Let $(\mathcal{F}_t)_{t\ge 0}$ be a filtration. If $M_t$ is adapted to the filtration $\mathcal{F}_t$, $E\vert M_t\vert <\infty$ and
 
-<span class="math center"><img src="https://math.vercel.app?from=E[M_t\vert \mathcal{F}_s]=M_s"/></span>
+$$E[M_t\vert \mathcal{F}_s]=M_s$$
 
 holds for any $t>s$ we say that $M_t$ is a martingale.
 
@@ -75,7 +75,7 @@ holds for any $t>s$ we say that $M_t$ is a martingale.
 
 **Probability exercises**
 
-Let <img class="math inline" src="https://math.vercel.app?inline=(W(t))_{t\ge}"/> be a Brownian motion (Björk, Definition 4.1).
+Let $(W(t))_{t\ge}$ be a Brownian motion (Bjork, Definition 4.1).
 
 **Exercise 1.** Show that the following processes also are Brownian motions.
 
@@ -88,13 +88,13 @@ Let <img class="math inline" src="https://math.vercel.app?inline=(W(t))_{t\ge}"/
 
 By assumption $W$ is a Brownian motion and so it follows that
 
-<span class="math center"><img src="https://math.vercel.app?from=-W_0=-1\cdot0=0."/></span>
+$$-W_0=-1\cdot0=0$$
 
-Furthermore, for $r<s\le t< u$ it holds that $W_u-W_t$ and $W_s-W_r$ is independent. By seperate transformations the independence property is preserved and $-(W_u-W_t)$ and $-(W_s-W_r)$ is independent. Next, for a normal distributed random variable <img class="math inline"  src="https://math.now.sh?inline=N\sim\mathcal{N}(\mu,\sigma^2)"/> it holds, that for a scaler $c\in\mathbb{R}$ we have <img class="math inline"  src="https://math.vercel.app?inline=c N\sim\mathcal{N}(c\mu,c^2\sigma ^2)" />. Then obviously;
+Furthermore, for $r<s\le t< u$ it holds that $W_u-W_t$ and $W_s-W_r$ is independent. By seperate transformations the independence property is preserved and $-(W_u-W_t)$ and $-(W_s-W_r)$ is independent. Next, for a normal distributed random variable $N\sim\mathcal{N}(\mu,\sigma^2)$ it holds, that for a scaler $c\in\mathbb{R}$ we have $c N\sim\mathcal{N}(c\mu,c^2\sigma ^2)$. Then obviously;
 
-<span class="math center"><img src="https://math.vercel.app?from=-(W_t)=(-1)W_t\stackrel{d}{=}\mathcal{N}((-1)\cdot0,(-1)^2(t-s))\stackrel{d}{=}\mathcal{N}( 0,t-s)."/></span>
+$$-(W_t)=(-1)W_t\stackrel{d}{=}\mathcal{N}((-1)\cdot0,(-1)^2(t-s))\stackrel{d}{=}\mathcal{N}( 0,t-s).$$
 
-Lastly, let $\omega \in \Omega$ and consider the sample path <img src="https://math.vercel.app?inline=s\mapsto (-W_s)(\omega)"/>. Clearly for two continuous functions $f$ and $g$ it holds that <img src="https://math.vercel.app?inline=(g\circ f)"/> is continuous. Then with $g(f)=-f$ and <img src="https://math.vercel.app?inline=f(t)=W_t(\omega)"/>$ it follows that <img src="https://math.vercel.app?inline=(-W_t)=(g\circ W)(t)"/> is also continuous.
+Lastly, let $\omega \in \Omega$ and consider the sample path $s\mapsto (-W_s)(\omega)$. Clearly for two continuous functions $f$ and $g$ it holds that $(g\circ f)$ is continuous. Then with $g(f)=-f$ and $f(t)=W_t(\omega)"/>$ it follows that $(-W_t)=(g\circ W)(t)$ is also continuous.
 
 </details>
 <details>
@@ -104,11 +104,11 @@ Much like the previous exercise we define a new process and show the properties 
 
 First, we let $t=0$ and see
 
-<span class="math center"><img src="https://math.vercel.app?from=X_0=W(0+s)-W(s)=W(s)-W(s)=0."/></span>
+$$X_0=W(0+s)-W(s)=W(s)-W(s)=0.$$
 
 Secondly, we have that for $r<u$:
 
-<span class="math center"><img src="https://math.vercel.app?from=X_u-X_r=W(u+s)-W(s)-(W(r+s)-W(s))=W(u+s)-W(r+s)\sim \mathcal{N}(0,u+s-(r+s))=\mathcal{N}(0,u-r)."/></span>
+$$X_u-X_r=W(u+s)-W(s)-(W(r+s)-W(s))=W(u+s)-W(r+s)\sim \mathcal{N}(0,u+s-(r+s))=\mathcal{N}(0,u-r).$$
 
 and since for $r<u\le k<l$ the translation $r+s<u+s\le k+s<l+s$ still holds and $X_l-X_k=W(l+s)-W(k+s)$ and $X_u-X_r=W(u+s)-W(k+s)$ are independent. Finally since $W_t(\omega)$ is continuous in $t$ hence the translation $W_{t+s}$ is continouos. Adding a constant yields a function that is also continuous, hence $X_t$ is continuous.
 
@@ -118,52 +118,52 @@ and since for $r<u\le k<l$ the translation $r+s<u+s\le k+s<l+s$ still holds and 
 
 Let $c>0$ be given. We show that
 
-<span class="math center"><img src="https://math.vercel.app?from=X_t=cW\left(\frac{t}{c^2}\right)"/></span>
+$$X_t=cW\left(\frac{t}{c^2}\right)$$
 
 is a Brownian motion. We simply show the four properties. Let $t=0$ and notice
 
-<span class="math center"><img src="https://math.vercel.app?from=X_0=cW\left(\frac{0}{c^2}\right)=cW(0)=0."/></span>
+$$X_0=cW\left(\frac{0}{c^2}\right)=cW(0)=0.$$
 
 The second property follows from seperate transformation and that for $r<u\le s<t$ we consider
 
-<span class="math center"><img src="https://math.vercel.app?from=X_u-X_r=c\left(W\left(\frac{u}{c^2}\right)-W\left(\frac{r}{c^2}\right)\right)\hspace{20pt}\text{and}\hspace{20pt}X_t-X_s=c\left(W\left(\frac{t}{c^2}\right)-W\left(\frac{s}{c^2}\right)\right)"/></span>
+$$X_u-X_r=c\left(W\left(\frac{u}{c^2}\right)-W\left(\frac{r}{c^2}\right)\right)\hspace{20pt}\text{and}\hspace{20pt}X_t-X_s=c\left(W\left(\frac{t}{c^2}\right)-W\left(\frac{s}{c^2}\right)\right)$$
 
 and since $c,r,u,t,s>0$ we have the same order for the scaled version of $r,u,t,s$ and hence we have two independent RV scaled by $c$. Then by seperate transformations the variables is still independent. Next for the third property:
 
-<span class="math center"><img src="https://math.vercel.app?from=X_t-X_s=c\left(W\left(\frac{t}{c^2}\right)-W\left(\frac{s}{c^2}\right)\right)\sim\mathcal{N}\left(c\cdot 0,c^2\left(\frac{t}{c^2}-\frac{s}{c^2}\right)\right)=\mathcal{N}(0,t-s)."/></span>
+$$X_t-X_s=c\left(W\left(\frac{t}{c^2}\right)-W\left(\frac{s}{c^2}\right)\right)\sim\mathcal{N}\left(c\cdot 0,c^2\left(\frac{t}{c^2}-\frac{s}{c^2}\right)\right)=\mathcal{N}(0,t-s).$$
 
-Where we use the properties of scaling a normal distributed random variable i.e. for $c>0$ and <img class="math inline"  src="https://math.vercel.app?inline= N\sim\mathcal{N}(\mu,\sigma ^2)" /> it follows that <img class="math inline"  src="https://math.vercel.app?inline=c N\sim\mathcal{N}(c\mu,c^2\sigma ^2)" />. Finally, the forth property follows since $g(f)=cf$ is continuous and $h(t)=t/c^2$ is continuous, then for any continuous function $f(s)$ it follows that <img src="https://math.vercel.app?inline=(g \circ f\circ h)=g(f(h(t)))"/> is continuous.
+Where we use the properties of scaling a normal distributed random variable i.e. for $c>0$ and $ N\sim\mathcal{N}(\mu,\sigma ^2)$ it follows that $c N\sim\mathcal{N}(c\mu,c^2\sigma ^2)$. Finally, the forth property follows since $g(f)=cf$ is continuous and $h(t)=t/c^2$ is continuous, then for any continuous function $f(s)$ it follows that $(g \circ f\circ h)=g(f(h(t)))$ is continuous.
 
 </details>
 
 &nbsp;
 
 <blockquote class = "prop">
-**Proposition B.37.** Let <img src="https://math.vercel.app?inline=(\Omega,\mathcal{F},P)"/> be a given probability space, let <img src="https://math.vercel.app?inline=\mathcal{G}"/> be a sub-sigma-algebra of <img src="https://math.vercel.app?inline=\mathcal{F}"/>, and let $X$ be a square integrable random variable.
+**Proposition B.37.** Let $(\Omega,\mathcal{F},P)$ be a given probability space, let $\mathcal{G}$ be a sub-sigma-algebra of $\mathcal{F}$, and let $X$ be a square integrable random variable.
 Consider the problem of minimizing
-<span class="math center"><img src="https://math.vercel.app?from=E\left[(X-Z)^2\right]"/></span>
-where $Z$ is allowed to vary over the class of all square integrable <img src="https://math.vercel.app?inline=\mathcal{G}"/> measurable random variables. The optimal solution <img src="https://math.vercel.app?inline=\hat{Z}"/> is then given by.
-<span class="math center"><img src="https://math.vercel.app?from=\hat{Z}=E[X\vert\mathcal{G}]."/></span>
+$$E\left[(X-Z)^2\right]$$
+where $Z$ is allowed to vary over the class of all square integrable $\mathcal{G}$ measurable random variables. The optimal solution $\hat{Z}$ is then given by.
+$$\hat{Z}=E[X\vert\mathcal{G}].$$
 </blockquote>
 
 **Exercise 2.** *(Bjork, exercise B.11.)* Prove proposition B.37 by going along the following lines.
 
-  a. Prove that the "estimation error" <img src="https://math.vercel.app?inline=X-E[X\vert\mathcal{G}]"/> is orthogonal to <img src="https://math.vercel.app?inline=L^2(\Omega,\mathcal{G},P)"/> in the sence that for any <img src="https://math.vercel.app?inline=Z\in L^2(\Omega,\mathcal{G},P)"/> we have
-  <span class="math center"><img src="https://math.vercel.app?from=E[Z\cdot(X-E[X\vert\mathcal{G}])]=0"/></span>
+  a. Prove that the "estimation error" $X-E[X\vert\mathcal{G}]$ is orthogonal to $L^2(\Omega,\mathcal{G},P)$ in the sence that for any $Z\in L^2(\Omega,\mathcal{G},P)$ we have
+  $$E[Z\cdot(X-E[X\vert\mathcal{G}])]=0$$
   b. Now prove the proposition by writing
-  <span class="math center"><img src="https://math.vercel.app?from=X-Z=(X-E[X\vert\mathcal{G}])%2B(E[X\vert\mathcal{G}]-Z)"/></span>
+  $$X-Z=(X-E[X\vert\mathcal{G}])+(E[X\vert\mathcal{G}]-Z)$$
   and use the result just proved.
 
 <details>
 <summary>**Solution (a).**</summary>
 
-Let <img src="https://math.vercel.app?inline=X\in L^2(\Omega,\mathcal{F},P):=F"/> be a random variable. Now consider an arbitrary <img src="https://math.vercel.app?inline=Z\in L^2(\Omega,\mathcal{G},P):=G"/>. Recall that <img src="https://math.vercel.app?inline= \mathcal{G}\subset \mathcal{F}"/> and so $X$ is also in $G$, as it is bothe square integrable and <img src="https://math.vercel.app?inline=\mathcal{G}"/>-measurable. Then
+Let $X\in L^2(\Omega,\mathcal{F},P)$ be a random variable. Now consider an arbitrary $Z\in L^2(\Omega,\mathcal{G},P)$. Recall that $ \mathcal{G}\subset \mathcal{F}$ and so $X$ is also in $Z\in L^2(\Omega,\mathcal{G},P)$, as it is bothe square integrable and $\mathcal{G}$-measurable. Then
 
-<span class="math center"><img src="https://math.vercel.app?from=E\left[Z\cdot(X-E[X\vert\mathcal{G}])\right]=E\left[Z\cdot X\right]-E\left[Z\cdot E[X\vert\mathcal{G}]\right]."/></span>
+$$E\left[Z\cdot(X-E[X\vert\mathcal{G}])\right]=E\left[Z\cdot X\right]-E\left[Z\cdot E[X\vert\mathcal{G}]\right].$$
 
-Then by using the law of total expectation and secondly that $Z$ is <img src="https://math.vercel.app?inline=\mathcal{G}"/>-measurable we have that
+Then by using the law of total expectation and secondly that $Z$ is $\mathcal{G}$-measurable we have that
 
-<span class="math center"><img src="https://math.vercel.app?from=E\left[Z\cdot X\right]=E\left[E[Z\cdot X\vert\mathcal{G}]\right]=E\left[Z\cdot E[ X\vert\mathcal{G}]\right]."/></span>
+$$E\left[Z\cdot X\right]=E\left[E[Z\cdot X\vert\mathcal{G}]\right]=E\left[Z\cdot E[ X\vert\mathcal{G}]\right].$$
 
 Combining the two equations gives the desired result.
 
@@ -173,21 +173,21 @@ Combining the two equations gives the desired result.
 
 Obviously, we have that
 
-<span class="math center"><img src="https://math.vercel.app?from=X-Z=X-Z%2BE[X\vert\mathcal{G}]-E[X\vert\mathcal{G}]=(X-E[X\vert\mathcal{G}])%2B(E[X\vert\mathcal{G}]-Z)."/></span>
+$$X-Z=X-Z+E[X\vert\mathcal{G}]-E[X\vert\mathcal{G}]=(X-E[X\vert\mathcal{G}])+(E[X\vert\mathcal{G}]-Z).$$
 
 Then squaring the terms gives
 
-<span class="math center"><img src="https://math.vercel.app?from=(X-Z)^2=(X-E[X\vert\mathcal{G}])^2%2B(E[X\vert\mathcal{G}]-Z)^2%2B2(X-E[X\vert\mathcal{G}])(E[X\vert\mathcal{G}]-Z)"/></span>
+$$(X-Z)^2=(X-E[X\vert\mathcal{G}])^2+(E[X\vert\mathcal{G}]-Z)^2+2(X-E[X\vert\mathcal{G}])(E[X\vert\mathcal{G}]-Z)$$
 
 Taking expectation on each side and using linearity of the expectation we have that
 
-<span class="math center"><img src="https://math.vercel.app?from=E[(X-Z)^2]=E\left[(X-E[X\vert\mathcal{G}])^2\right]%2BE\left[(E[X\vert\mathcal{G}]-Z)^2\right]%2B2E\left[(X-E[X\vert\mathcal{G}])(E[X\vert\mathcal{G}]-Z)\right]."/></span>
+$$E[(X-Z)^2]=E\left[(X-E[X\vert\mathcal{G}])^2\right]+E\left[(E[X\vert\mathcal{G}]-Z)^2\right]+2E\left[(X-E[X\vert\mathcal{G}])(E[X\vert\mathcal{G}]-Z)\right].$$
 
-We can now use that <img src="https://math.vercel.app?inline=E[X\vert\mathcal{G}]-Z"/> is <img src="https://math.vercel.app?inline=\mathcal{G}"/>-measurable with the above result on the last term.
+We can now use that $E[X\vert\mathcal{G}]-Z$ is $\mathcal{G}$-measurable with the above result on the last term.
 
-<span class="math center"><img src="https://math.vercel.app?from=E[(X-Z)^2]=E\left[(X-E[X\vert\mathcal{G}])^2\right]%2BE\left[(E[X\vert\mathcal{G}]-Z)^2\right]."/></span>
+$$E[(X-Z)^2]=E\left[(X-E[X\vert\mathcal{G}])^2\right]+E\left[(E[X\vert\mathcal{G}]-Z)^2\right].$$
 
-Now since $X$ is given the term <img src="https://math.vercel.app?inline=E\left[(X-E[X\vert\mathcal{G}])^2\right]"/> is simply a constant not depending on the choice og $Z$. The optimal choice of $Z$ is then <img src="https://math.vercel.app?inline=E[X\vert\mathcal{G}]"/> since this minimizes the second term. The statement is then proved.
+Now since $X$ is given the term $E\left[(X-E[X\vert\mathcal{G}])^2\right]$ is simply a constant not depending on the choice og $Z$. The optimal choice of $Z$ is then $E[X\vert\mathcal{G}]$ since this minimizes the second term. The statement is then proved.
 
 </details>
 
@@ -200,7 +200,7 @@ Let $X$ be a random variable with distribution function $F(x)=P(X\le x)$ and $Y$
 <blockquote class = "def">
 **Definition.** The moment generating function or Laplace transform of $X$ is
 
-<span class="math center"><img src="https://math.vercel.app?from=\psi_X(\lambda)=E\left[e^{\lambda X}\right]=\int_{-\infty}^\infty e^{\lambda x}dF(x)"/></span>
+$$\psi_X(\lambda)=E\left[e^{\lambda X}\right]=\int_{-\infty}^\infty e^{\lambda x}dF(x)$$
 
 provided the expectation is finite for $\vert\lambda\vert<h$ for some $h>0$.
 </blockquote>
@@ -216,18 +216,18 @@ There is also the following result of independence for Moment generating functio
 <blockquote class = "thm">
 **Theorem 1.** *(Independence)* If 
 
-<span class="math center"><img src="https://math.vercel.app?from=E\left[e^{\lambda_1X+\lambda_2Y}\right]=\psi_X(\lambda_1)\psi_Y(\lambda_2)"/></span>
+$$E\left[e^{\lambda_1X+\lambda_2Y}\right]=\psi_X(\lambda_1)\psi_Y(\lambda_2)$$
 
 for $\vert\lambda_i\vert<h$ for $i=1,2$ for some $h>0$, then $X$ and $Y$ are independent random variables.
 </blockquote>
 
 **Example.** Recall that the Moment generating function of a normal (Gaussian) distribution is given by
 
-<span class="math center"><img src="https://math.vercel.app?from=\psi_X(\lambda)=E\left[e^{\lambda X}\right]=\exp\left(\lambda \mu %2B \frac{\lambda^2}{2}\sigma^2\right)"/></span>
+$$\psi_X(\lambda)=E\left[e^{\lambda X}\right]=\exp\left(\lambda \mu + \frac{\lambda^2}{2}\sigma^2\right)$$
 
-where $X$ is normally distributed with mean $\mu$ and variance $\sigma^2$ and <img src="https://math.vercel.app?inline=\lambda\in\mathbb{R}"/> is a constant. Since a Brownian motion $W(t)$ is normally distributed with zero mean and variance $t$, we have that
+where $X$ is normally distributed with mean $\mu$ and variance $\sigma^2$ and $\lambda\in\mathbb{R}$ is a constant. Since a Brownian motion $W(t)$ is normally distributed with zero mean and variance $t$, we have that
 
-<span class="math center"><img src="https://math.vercel.app?from=E[\exp(\lambda W(t))]=\exp\left(\frac{\lambda^2}{2}t\right)."/></span>
+$$E[\exp(\lambda W(t))]=\exp\left(\frac{\lambda^2}{2}t\right).$$
 
 <details>
 <summary>**Discussion.**</summary>
@@ -238,7 +238,7 @@ where $X$ is normally distributed with mean $\mu$ and variance $\sigma^2$ and <i
 
 &nbsp;
 
-**Exercise 4.** *(Bjork, exercise C.8.(a-c))* Let $W$ be a Brownian motion. Notice that for the natural filtration <img src="https://math.vercel.app?inline=\mathcal{F}_s=\sigma(W_t\vert t\le s)"/> $W_t-W_s$ is independent of <img src="https://math.vercel.app?inline=\mathcal{F}_s"/>.
+**Exercise 4.** *(Bjork, exercise C.8.(a-c))* Let $W$ be a Brownian motion. Notice that for the natural filtration $\mathcal{F}_s=\sigma(W_t\vert t\le s)$ $W_t-W_s$ is independent of $\mathcal{F}_s$
 
   a. Show that $W_t$ is a martingale.
   b. Show that $W^2_t-t$ is a martingale.
@@ -249,55 +249,55 @@ where $X$ is normally distributed with mean $\mu$ and variance $\sigma^2$ and <i
 
 We show that for the natural filtration that $W_t$ is a martingale. This include showing integrability and the martingale property. For the first we note that for a normal distributed random variable with mean 0 we have
 
-<span class="math center"><img src="https://math.vercel.app?from=E[\vert N\vert]=\int_{-\infty}^\infty \vert x\vert dF_N(x)=2\int_{0}^\infty xdF_N(x)"/></span>
+$$E[\vert N\vert]=\int_{-\infty}^\infty \vert x\vert dF_N(x)=2\int_{0}^\infty xdF_N(x)$$
 
 since the distribution is symmetric. Substituting the distribution function $\Phi(x)=P(N\le x)$ in we see that
 
-<span class="math center"><img src="https://math.vercel.app?from=E[\vert N\vert]=2\int_{0}^\infty xd\Phi(x)=2\int_{0}^\infty x\frac{1}{\sqrt{2\pi\sigma^2}}e^{-x^2/(2\sigma^2)}dx=(*)"/></span>
+$$E[\vert N\vert]=2\int_{0}^\infty xd\Phi(x)=2\int_{0}^\infty x\frac{1}{\sqrt{2\pi\sigma^2}}e^{-x^2/(2\sigma^2)}dx=(*)$$
 
 by substituting $u=x^2/(2\sigma^2)$ ($x=\sqrt{2\sigma^2u}$) we have that
 
-<span class="math center"><img src="https://math.vercel.app?from=\frac{dx}{du}=\frac{1}{2}\sqrt{2\sigma^2u}2\sigma^2=(\sigma^2)^{3/2}\sqrt{2}u\iff dx=(\sigma^2)^{3/2}\sqrt{2}u\ du"/></span>
+$$\frac{dx}{du}=\frac{1}{2}\sqrt{2\sigma^2u}2\sigma^2=(\sigma^2)^{3/2}\sqrt{2}u\iff dx=(\sigma^2)^{3/2}\sqrt{2}u\ du$$
 
 hence
 
-<span class="math center"><img src="https://math.vercel.app?from=(*)=\frac{2}{\sqrt{2\pi\sigma^2}}\int_0^{\infty}\sqrt{2\sigma^2u}e^{-u}(\sigma^2)^{3/2}\sqrt{2}u\ du=\frac{2\sqrt{2\sigma^2}(\sigma^2)^{3/2}\sqrt{2}}{\sqrt{2\pi\sigma^2}}\int_0^{\infty}\sqrt{u}e^{-u}u\ du."/></span>
+$$(*)=\frac{2}{\sqrt{2\pi\sigma^2}}\int_0^{\infty}\sqrt{2\sigma^2u}e^{-u}(\sigma^2)^{3/2}\sqrt{2}u\ du=\frac{2\sqrt{2\sigma^2}(\sigma^2)^{3/2}\sqrt{2}}{\sqrt{2\pi\sigma^2}}\int_0^{\infty}\sqrt{u}e^{-u}u\ du.$$
 
 This then simplify to
 
-<span class="math center"><img src="https://math.vercel.app?from=(*)=\frac{(2\sigma^2)^{3/2}}{\sqrt{\pi}}\int_0^{\infty}u^{3/2}e^{-u}\ du=(2\sigma^2)^{1/2}\sqrt{\frac{2\sigma^2}{\pi}}\int_0^{\infty}u^{3/2}e^{-u}\ du=\sqrt{\frac{2\sigma^2}{\pi}}<\infty."/></span>
+$$(*)=\frac{(2\sigma^2)^{3/2}}{\sqrt{\pi}}\int_0^{\infty}u^{3/2}e^{-u}\ du=(2\sigma^2)^{1/2}\sqrt{\frac{2\sigma^2}{\pi}}\int_0^{\infty}u^{3/2}e^{-u}\ du=\sqrt{\frac{2\sigma^2}{\pi}}<\infty.$$
 
 (Obviously the above is not derived correctly, but the end expression is valid, source: [link](https://arxiv.org/pdf/1402.3559.pdf)) However since
 
-<span class="math center"><img src="https://math.vercel.app?from=W_t=W_t-0=W_t-W_0\sim\mathcal{N}(0,t)"/></span>
+$$W_t=W_t-0=W_t-W_0\sim\mathcal{N}(0,t)$$
 
-we have that <img src="https://math.vercel.app?inline=E\vert W_t\vert<\infty"/> as desired.
+we have that $E\vert W_t\vert<\infty$ as desired.
 
 Next, we have that
 
-<span class="math center"><img src="https://math.vercel.app?from=E[W_t\vert \mathcal{F}_s]=E[W_t-W_s\vert\mathcal{F}_s]+W_s=0%2BW_s=W_s."/></span>
+$$E[W_t\vert \mathcal{F}_s]=E[W_t-W_s\vert\mathcal{F}_s]+W_s=0+W_s=W_s.$$
 
-In the above we used that $W_t-W_s$ is <img src="https://math.vercel.app?inline=\mathcal{F}_s"/>-measurable with mean 0. Then it follows that $W_t$ is a martingale.
+In the above we used that $W_t-W_s$ is $\mathcal{F}_s$-measurable with mean 0. Then it follows that $W_t$ is a martingale.
 
 </details>
 <details>
 <summary>**Solution (b).**</summary>
 
-Let <img src="https://math.vercel.app?inline=M_t=W_t^2-t"/>. First, we observe that two measurable functions composed is still a measurable function. Hence we know that $M_t$ is measurable wrt. the filtration since $W_t$ is measurable and $w\mapsto w^2+t$ is measurable. Secondly, we have that
+Let $M_t=W_t^2-t$. First, we observe that two measurable functions composed is still a measurable function. Hence we know that $M_t$ is measurable wrt. the filtration since $W_t$ is measurable and $w\mapsto w^2+t$ is measurable. Secondly, we have that
 
-<span class="math center"><img src="https://math.vercel.app?from=E[\vert W_t^2-t\vert]\le E\vert W_t^2\vert %2BE\vert t\vert=t%2Bt=2t<\infty"/></span>
+$$E[\vert W_t^2-t\vert]\le E\vert W_t^2\vert +E\vert t\vert=t+t=2t<\infty$$
 
 where we use the triangle inequality. Thirdly, for the martingale property we have that for $t>s$:
 
-<span class="math center"><img src="https://math.vercel.app?from=E[M_t\vert \mathcal{F}_s]=E[W_t^2-t\vert \mathcal{F}_s]=E[W_t^2%2BW_s^2-2W_tW_s-W_s^2%2B2W_tW_s-t\vert \mathcal{F}_s]"/></span>
+$$E[M_t\vert \mathcal{F}_s]=E[W_t^2-t\vert \mathcal{F}_s]=E[W_t^2+W_s^2-2W_tW_s-W_s^2+2W_tW_s-t\vert \mathcal{F}_s]$$
 
 which by linearity and independence of increments to the filtration gives
 
-<span class="math center"><img src="https://math.vercel.app?from=E[M_t\vert \mathcal{F}_s]=E[(W_t-W_s)^2-W_s^2%2B2W_tW_s-t\vert \mathcal{F}_s]=t-s-t%2BE[2W_tW_s-W_s^2\vert \mathcal{F}_s]"/></span>
+$$E[M_t\vert \mathcal{F}_s]=E[(W_t-W_s)^2-W_s^2+2W_tW_s-t\vert \mathcal{F}_s]=t-s-t+E[2W_tW_s-W_s^2\vert \mathcal{F}_s]$$
 
 However since $W_s$ is measurable wrt. the filtration at time $s$ the above is
 
-<span class="math center"><img src="https://math.vercel.app?from=E[M_t\vert \mathcal{F}_s]=2W_sE[W_t\vert \mathcal{F}_s]-W_s^2-s=2W_s^2-W_s^2-s=W_s^2-s=M_s."/></span>
+$$E[M_t\vert \mathcal{F}_s]=2W_sE[W_t\vert \mathcal{F}_s]-W_s^2-s=2W_s^2-W_s^2-s=W_s^2-s=M_s.$$
 
 Since from (a) we know that $W_t$ is a martingale. Then we arrive at the desired result.
 
@@ -305,21 +305,24 @@ Since from (a) we know that $W_t$ is a martingale. Then we arrive at the desired
 <details>
 <summary>**Solution (c).**</summary>
 
-Let <img src="https://math.vercel.app?inline=M_t=\exp\left(\lambda W_t-\frac{\lambda^2}{2}t\right)"/>. First, by composition of measurable functions $M_t$ is <img src="https://math.vercel.app?inline=\mathcal{F}_t"/>-measurable. Secondly, we have using the MGF for a normal distributed random variable:
+Let $M_t=\exp\left(\lambda W_t-\frac{\lambda^2}{2}t\right)$. First, by composition of measurable functions $M_t$ is $\mathcal{F}_t$-measurable. Secondly, we have using the MGF for a normal distributed random variable:
 
-<span class="math center"><img src="https://math.vercel.app?from=E\vert M_t=E\left(\exp\left(\lambda W_t-\frac{\lambda^2}{2}t\right)\right)\le E\left(\exp\left(\lambda W_t\right)\right)=\exp\left(\frac{\lambda^2}{2}t\right)<\infty."/></span>
+$$E\vert M_t=E\left(\exp\left(\lambda W_t-\frac{\lambda^2}{2}t\right)\right)\le E\left(\exp\left(\lambda W_t\right)\right)=\exp\left(\frac{\lambda^2}{2}t\right)<\infty.$$
 
 Thirdly, we consider
 
-<span class="math center"><img src="https://math.vercel.app?from=E[M_t\vert\mathcal{F}_s]=E\left.\left[\left(\exp\left(\lambda W_t-\frac{\lambda^2}{2}t\right)\right)\right\vert\mathcal{F}_s\right]=\exp\left(-\frac{\lambda^2}{2}t\right)E\left.\left[\left(\exp\left(\lambda W_t\right)\right)\right\vert\mathcal{F}_s\right]."/></span>
+$$E[M_t\vert\mathcal{F}_s]=E\left.\left[\left(\exp\left(\lambda W_t-\frac{\lambda^2}{2}t\right)\right)\right\vert\mathcal{F}_s\right]=\exp\left(-\frac{\lambda^2}{2}t\right)E\left.\left[\left(\exp\left(\lambda W_t\right)\right)\right\vert\mathcal{F}_s\right].$$
 
 By adding and subtracting $W_s$ in the exponent we get
 
-<span class="math center"><img src="https://math.vercel.app?from=E[M_t\vert\mathcal{F}_s]=\exp\left(-\frac{\lambda^2}{2}t\right)E\left.\left[\left(\exp\left(\lambda (W_t-W_s)%2B\lambda W_s\right)\right)\right\vert\mathcal{F}_s\right]=\exp\left(-\frac{\lambda^2}{2}t\right)\exp\left(\frac{\lambda^2}{2}(t-s)\right)E\left.\left[\left(\exp\left(\lambda W_s\right)\right)\right\vert\mathcal{F}_s\right]."/></span>
+\begin{align*}
+E[M_t\vert\mathcal{F}_s]&=\exp\left(-\frac{\lambda^2}{2}t\right)E\left.\left[\left(\exp\left(\lambda (W_t-W_s)+\lambda W_s\right)\right)\right\vert\mathcal{F}_s\right]\\
+&=\exp\left(-\frac{\lambda^2}{2}t\right)\exp\left(\frac{\lambda^2}{2}(t-s)\right)E\left.\left[\left(\exp\left(\lambda W_s\right)\right)\right\vert\mathcal{F}_s\right].
+\end{align*}
 
-Using that <img src="https://math.vercel.app?inline=E\left.\left[\left(\exp\left(\lambda W_s\right)\right)\right\vert\mathcal{F}_s\right]=\exp\left(\lambda W_s\right)"/> and combining the exponents gives the desired:
+Using that $E\left.\left[\left(\exp\left(\lambda W_s\right)\right)\right\vert\mathcal{F}_s\right]=\exp\left(\lambda W_s\right)$ and combining the exponents gives the desired:
 
-<span class="math center"><img src="https://math.vercel.app?from=E[M_t\vert\mathcal{F}_s]=\exp\left(\lambda W_s-\frac{\lambda^2}{2}s\right)=M_s."/></span>
+$$E[M_t\vert\mathcal{F}_s]=\exp\left(\lambda W_s-\frac{\lambda^2}{2}s\right)=M_s.$$
 
 </details>
 
